@@ -29,9 +29,10 @@
 <div id="content" class="clearfix">
     <div id="link-column">
         <h2>Moqui</h2>
-        <a href="index.html">Ecosystem</a>
-        <a href="framework.html">Framework</a>
+        <a href="index.html">Planet</a>
+        <a href="framework.html">Core (Framework)</a>
         <a href="mantle.html">Mantle</a>
+        <a href="crust.html">Crust</a>
 
         <h2>Resources</h2>
         <a href="http://sourceforge.net/projects/moqui/files">Download</a>
