@@ -16,7 +16,7 @@
 <!-- header start -->
 <div id="header" class="clearfix">
     <div class="left">
-        <h1><a href="http://www.moqui.org/">Moqui Ecosystem</a></h1>
+        <h1><a href="http://www.moqui.org/">Planet Moqui</a></h1>
     </div>
     <div class="right">
         <a href="http://sourceforge.net/"><img src="http://sflogo.sourceforge.net/sflogo.php?group_id=302949&amp;type=16" alt="SourceForge.net"></a>
@@ -29,9 +29,10 @@
 <div id="content" class="clearfix">
     <div id="link-column">
         <h2>Moqui</h2>
-        <a href="index.html">Ecosystem</a>
-        <a href="framework.html">Framework</a>
+        <a href="index.html">Planet</a>
+        <a href="framework.html">Core (Framework)</a>
         <a href="mantle.html">Mantle</a>
+        <a href="crust.html">Crust</a>
 
         <h2>Resources</h2>
         <a href="http://sourceforge.net/projects/moqui/files">Download</a>
@@ -93,6 +94,7 @@
                         <li>Universal Service Library (USL)</li>
                     </ul>
                     </li>
+                    <li><a href="crust.html">Moqui Crust</a>: add-on themes, tool integrations, applications, etc</li>
                 </ul>
             </div>
         </div>
