@@ -18,6 +18,7 @@ This release includes:
   suspended for easier finding of lock wait timeout types of errors
 - Moved MoquiDefaultConf.xml from framework/api to framework/impl since it
   contains a lot of implementation-specific configuration
+- Updated Atomikos TransactionsEssentials to 3.7.0 and ehcache to 2.4.1
 
 
 ===========================================================================
@@ -406,6 +407,7 @@ Additional tools and features planned for 1.0 final:
 ===========================================================================
 
 - Trim stack traces to not include Groovy proxy/etc calls (Sam's idea)
+- Support <component>/lib and runtime/lib jar loading
 - XML Screens
   - Template for xsl-fo render mode, FOP transform to PDF
 - Tools Screens
